@@ -1,6 +1,7 @@
 * next-version
 - Do not move point by correction functions.
 - New interface - =avy-menu=. Thanks to @clemera.
+- Mark custom interfaces as autoload.
 
 * v0.5
 - Skip words that don't need to be fixed (e.g. duplicates).
